--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=681,89
-Size=550,593
+Pos=658,45
+Size=539,593
+Collapsed=0
+
+[Window][Example: Console]
+Pos=207,74
+Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=-6,95
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=27,43
+Size=762,393
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,59
+Size=520,600
 Collapsed=0
 
