Added the input polling stuff

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=658,45
+Pos=591,-4
 Size=539,593
 Collapsed=0
 
 [Window][Example: Console]
-Pos=207,74
+Pos=215,81
 Size=520,600
 Collapsed=0
 
