--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,18 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=591,-4
-Size=539,593
+Pos=0,362
+Size=1280,358
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Example: Console]
-Pos=215,81
-Size=520,600
+Pos=1151,333
+Size=267,593
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=-6,95
-Size=500,440
+Pos=628,84
+Size=324,351
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -24,12 +25,56 @@ Size=430,450
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=27,43
-Size=762,393
+Pos=286,35
+Size=539,293
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Long text display]
 Pos=60,59
 Size=520,600
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=0,19
+Size=449,701
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Window Size]
+Pos=0,0
+Size=1280,326
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Style Editor]
+Pos=693,204
+Size=353,714
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=265,699
+Size=466,284
+Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
+  DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
+  DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
+    DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
+    DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=Y
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,360 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1280,326 Selected=0x0B5ED8BF
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1280,32 CentralNode=1
+  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=1280,358 Selected=0xE927CF2F
 
