Re-added the PCH

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,362
-Size=1280,358
+Pos=492,110
+Size=298,299
 Collapsed=0
 DockId=0x00000007,0
 
@@ -51,7 +51,6 @@ Size=1280,720
 Collapsed=0
 
 [Window][Window Size]
-Pos=0,0
 Size=1280,326
 Collapsed=0
 DockId=0x00000003,0
@@ -67,14 +66,13 @@ Size=466,284
 Collapsed=0
 
 [Docking][Data]
+DockNode      ID=0x00000007 Pos=492,110 Size=298,299 Selected=0xE927CF2F
 DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
   DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
     DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
     DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=Y
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,360 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1280,326 Selected=0x0B5ED8BF
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1280,32 CentralNode=1
-  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=1280,358 Selected=0xE927CF2F
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1280,326 Selected=0x0B5ED8BF
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1280,32 CentralNode=1 Selected=0xE927CF2F
 
