--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=492,110
-Size=298,299
+Pos=751,134
+Size=298,304
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Example: Console]
 Pos=1151,333
@@ -65,8 +64,12 @@ Pos=265,699
 Size=466,284
 Collapsed=0
 
+[Window][Test Window]
+Pos=60,60
+Size=262,310
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000007 Pos=492,110 Size=298,299 Selected=0xE927CF2F
 DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
   DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
