--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Fortran module files
 *.mod
@@ -24,7 +23,6 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
@@ -35,3 +33,4 @@
 Bin
 Intermediate
 .vs
+Assimp
