--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=958,259
-Size=510,358
+Pos=700,244
+Size=510,372
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Example: Console]
 Pos=1151,333
@@ -70,8 +69,12 @@ Pos=60,60
 Size=262,310
 Collapsed=0
 
+[Window][Camera]
+Pos=60,60
+Size=469,203
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000005 Pos=958,259 Size=510,358 Selected=0xE927CF2F
 DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode    ID=0x00000009 Parent=0x3BC79352 SizeRef=449,701 Selected=0xCB707B69
   DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
