--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=700,244
-Size=510,372
+Pos=1060,0
+Size=220,720
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Example: Console]
 Pos=1151,333
@@ -70,8 +71,13 @@ Size=262,310
 Collapsed=0
 
 [Window][Camera]
-Pos=60,60
-Size=469,203
+Pos=192,272
+Size=469,180
+Collapsed=0
+
+[Window][Meshes]
+Pos=1021,66
+Size=310,714
 Collapsed=0
 
 [Docking][Data]
@@ -80,7 +86,9 @@ DockSpace     ID=0x3BC79352 Pos=0,19 Size=1280,701 Split=X
   DockNode    ID=0x0000000A Parent=0x3BC79352 SizeRef=829,701 Split=X
     DockNode  ID=0x00000006 Parent=0x0000000A SizeRef=739,701 CentralNode=1
     DockNode  ID=0x00000001 Parent=0x0000000A SizeRef=539,701
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=Y
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1280,326 Selected=0x0B5ED8BF
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1280,32 CentralNode=1 Selected=0xE927CF2F
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
+  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1058,720 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,326 Selected=0x0B5ED8BF
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,32 CentralNode=1 Selected=0xE927CF2F
+  DockNode    ID=0x00000007 Parent=0x8B93E3BD SizeRef=220,720 Selected=0xE927CF2F
 
